--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+      <h1 id="channel-name"></h1>
+    </header>
     <div id="root"></div>
     <!--
       This HTML file is a template.
